I used rm -f by accident but it's fixed lol

--- a/.github/copy_configs.yml
+++ b/.github/copy_configs.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Copy Config File
         run: |
           cp ~/.suckless/dwm/config.h /config/suckless/dwm
-        cp ~/.config/alacritty
+          cp ~/.config/alacritty/alacritty.yml /config/alacritty
+          cp ~.vimrc /config/vim
         shell: bash
 
