--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -8,13 +8,13 @@
 # bold_font Operator Mono Thick
 # bold_italic_font Operator Mono Medium
 # font_family      Input Mono
-font_family      FiraCode Nerd Font Mono 
+font_family      Mononoki Nerd Font Mono 
 italic_font      auto
 bold_font        auto
 bold_italic_font auto
 
 # Font size (in pts)
-font_size        16.0
+font_size        10.0
 
 # The foreground color
 foreground       #c0b18b
